приложение запускается, но в боте ничего нет